[package]
name = "hyper-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.8.5"

[dependencies]
libc = "0.2"
lazy_static = "1.4.0"
nix = "0.26"
wasmtime = "11.0.1"
wasmtime-wasi = "11.0.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
axum = "0.6"
reqwest = "0.11"
tracing = "0.1"
tracing-subscriber = "0.2.0"
backtrace = "0.3"
chrono = "0.4"
tokio = { version = "1.25", features = ["full"]}
anyhow = "1.0"
lru = "0.11.0"