[package]
name = "hyper-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
lazy_static = "1.4.0"
nix = "0.26"
wasmtime = "11.0.1"
wasmtime-wasi = "11.0.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
axum = { version = "0.6", features = ["multipart"]}
reqwest = { version = "0.11", features = ["multipart"]}
tracing = "0.1"
tracing-subscriber = "0.2.0"
backtrace = "0.3"
chrono = "0.4"
tokio = { version = "1.25", features = ["full"]}
anyhow = "1.0"
lru = "0.11.0"
rand = "0.8.5"
infer = { path = "../infer" }
ort = { version = "1.16.2", features = ["load-dynamic"] }
llama2rs = { path = "../llama2.rs" }